assets/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---

@import "minima";

//Custom style

.site-title {
  img {
    -webkit-filter: grayscale(1);/* Webkit */ 
    filter:gray;/* IE6-9 */ 
    filter: grayscale(1);/* W3C */ 
    transition-duration: 650ms;
    -moz-transition-duration: 650ms; /* Firefox 4 */
    -webkit-transition-duration: 650ms; /* Safari 和 Chrome */
    -o-transition-duration: 650ms; /* Opera */
  }
  &:hover {
    img {
      -webkit-filter: none;/* Webkit */ 
      filter:none;/* IE6-9 */ 
    }
  }
}
.pull-left {
  float: left;
}
.home {
  width: 78%;
  padding-right:2%;
}
.side {
  width: 20%;
}

#tags li {
  color: $text-color;
  a {
    color: $text-color;
  }
  &.active {
    color: $brand-color;
    a {
      color: $brand-color;
    }
  }
}

@media screen and (max-width: 478px){
  .home, .side {
    width: 100%;
    padding: 0;
  }
}

